# empa

./: main.py  pyproject.toml  teste.py
src/empa/: __init__.py  cli.py
utils/: build_python_etl.py
