[project]
name = "empa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RafaelAsafe", email = "asafe.ferr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "rich>=14.0.0",
    "typer[all]>=0.15.2",
]

[project.scripts]
empa = "empa.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
